# Spindle

./: .gitignore  COMS-572-Term-Presentation.pptx  README.md  run.sh
Ai/: Project_AI.py  generator.py  myfile.txt
Thread Library/: BuildCMake.bat  CMakeLists.txt
Thread-Library/: CMakeLists.txt  Sources
Thread-Library/include/: Config.h  DataCollector.h  Helper.h  Learner.h  Parallel.h  Pool.h  PoolManager.h  Spindle.h  Thread.h  ThreadConfig.h  Threads.h  TsQueue.h
Thread-Library/src/: Config.cpp  DataCollector.cpp  Helper.cpp  Learner.cpp  Parallel.cpp  Pool.cpp  PoolManager.cpp  Spindle.cpp  Thread.cpp  ThreadConfig.cpp  Threads.cpp  TsQueue.cpp
Thread-Library/tests/: CMakeLists.txt  main.cpp  testreadFile.txt
